// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SortDirectionButton > matches snapshot for asc defaultDirection 1`] = `
<button
  aria-label="Sort by name"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
  tabindex="0"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-r0vxuw-MuiSvgIcon-root"
    data-testid="ArrowUpwardIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
    />
  </svg>
</button>
`;

exports[`SortDirectionButton > matches snapshot for desc defaultDirection 1`] = `
<button
  aria-label="Sort by name"
  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-53g0n7-MuiButtonBase-root-MuiIconButton-root"
  tabindex="0"
  type="button"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-r0vxuw-MuiSvgIcon-root"
    data-testid="ArrowDownwardIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
    />
  </svg>
</button>
`;
